Update JavaRegexAnchor.java