@@ -1,6 +1,5 @@
 package com.zetcode;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
@@ -11,8 +10,8 @@ public class JavaRegexAnchor {
 
     public static void main(String[] args) {
 
-        List<String> sentences = Arrays.asList("I am looking for Jane.",
-                "Jane was walking along the rive.",
+        List<String> sentences = List.of("I am looking for Jane.",
+                "Jane was walking along the river.",
                 "Kate and Jane are close friends.");
 
         Pattern p = Pattern.compile("^Jane");
